<resources>
    <string name="app_name">S4-RecipeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="emailNotValid">Email is not valid</string>
    <string name="checkConnection">Check your connection</string>
    <string name="version">Version</string>
    <string name="recipe">Recipe</string>
    <string name="search">Search</string>
    <string name="lucky">Lucky</string>
    <string name="favorite">Favorite</string>
    <string name="headerInfo">What do you want to eat today?</string>
    <string name="recent_recipes">Recent recipes</string>
    <string name="hello">Hello</string>
    <string name="vegan">Vegan</string>
    <string name="meal_types">Meal types</string>
    <string name="diet_types">Diet types</string>
    <string name="submit">Submit</string>
    <string name="showMore">Show more</string>
    <string name="cheap">Cheap</string>
    <string name="popular">Popular</string>
    <string name="dairyFree">Dairy free</string>
    <string name="instructions">Instructions</string>
    <string name="steps">Steps</string>
    <string name="diets">Diets</string>
    <string name="similarRecipes">Similar recipes</string>
    <string name="items">Items</string>
    <string name="source">Source</string>
    <string name="check_your_connection">Check your connection</string>
    <string name="add_new_recipe_to_favorite">Add new recipe to favorite</string>
</resources>